# RepoCompass

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: config.example.toml
src/: config.py
src/agents/: community_agent.py  repo_agent.py
src/tools/: file.py  github.py
test/: test.py
