[project]
name = "RepoCompass"
version = "0.1.0"
description = "an AI-powered GitHub repository evaluation assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitingest>=0.1.4",
    "gitpython>=3.1.44",
    "httpx[socks]>=0.28.1",
    "mcp-server-git>=2025.1.14",
    "openai-agents>=0.0.19",
    "tomli>=2.2.1",
]
